Removing devices-api and vin endpoints (#174)
* Removing devices-api and vin endpoints

* lint

---------
